parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement SEMICOLON
Rule 2     statements -> statement SEMICOLON
Rule 3     statement -> ID EQUALS expression
Rule 4     expression -> NUMBER

Terminals, with rules where they appear

EQUALS               : 3
ID                   : 3
NUMBER               : 4
SEMICOLON            : 1 2
error                : 

Nonterminals, with rules where they appear

expression           : 3
statement            : 1 2
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement SEMICOLON
    (2) statements -> . statement SEMICOLON
    (3) statement -> . ID EQUALS expression

    ID              shift and go to state 3

    statements                     shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement SEMICOLON
    (3) statement -> . ID EQUALS expression

    ID              shift and go to state 3

    statement                      shift and go to state 4

state 2

    (2) statements -> statement . SEMICOLON

    SEMICOLON       shift and go to state 5


state 3

    (3) statement -> ID . EQUALS expression

    EQUALS          shift and go to state 6


state 4

    (1) statements -> statements statement . SEMICOLON

    SEMICOLON       shift and go to state 7


state 5

    (2) statements -> statement SEMICOLON .

    ID              reduce using rule 2 (statements -> statement SEMICOLON .)
    $end            reduce using rule 2 (statements -> statement SEMICOLON .)


state 6

    (3) statement -> ID EQUALS . expression
    (4) expression -> . NUMBER

    NUMBER          shift and go to state 9

    expression                     shift and go to state 8

state 7

    (1) statements -> statements statement SEMICOLON .

    ID              reduce using rule 1 (statements -> statements statement SEMICOLON .)
    $end            reduce using rule 1 (statements -> statements statement SEMICOLON .)


state 8

    (3) statement -> ID EQUALS expression .

    SEMICOLON       reduce using rule 3 (statement -> ID EQUALS expression .)


state 9

    (4) expression -> NUMBER .

    SEMICOLON       reduce using rule 4 (expression -> NUMBER .)

